--- a/src/diffdrive_arduino/CMakeLists.txt
+++ b/src/diffdrive_arduino/CMakeLists.txt
@@ -1,103 +1,75 @@
-cmake_minimum_required(VERSION 3.5)
-project(diffdrive_arduino)
+cmake_minimum_required(VERSION 3.16)
+project(diffdrive_arduino LANGUAGES CXX)
 
-# Default to C99
-if(NOT CMAKE_C_STANDARD)
-  set(CMAKE_C_STANDARD 99)
-endif()
-
-
-# Default to C++14
-if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 14)
-endif()
-
-
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+if(CMAKE_CXX_COMPILER_ID MATCHES "(GNU|Clang)")
   add_compile_options(-Wall -Wextra)
 endif()
 
+# find dependencies
+set(THIS_PACKAGE_INCLUDE_DEPENDS
+  hardware_interface
+  pluginlib
+  rclcpp
+  rclcpp_lifecycle
+)
+
+# find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(serial REQUIRED)
-find_package(hardware_interface REQUIRED)
-find_package(controller_manager REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(rclcpp_lifecycle REQUIRED)
-find_package(pluginlib REQUIRED)
+foreach(Dependency IN ITEMS ${THIS_PACKAGE_INCLUDE_DEPENDS})
+  find_package(${Dependency} REQUIRED)
+endforeach()
 
 
-
-
-
-add_library(diffdrive_arduino SHARED src/diffdrive_arduino.cpp src/wheel.cpp src/arduino_comms.cpp)
-
-target_include_directories(
+## COMPILE
+add_library(
   diffdrive_arduino
-  PRIVATE
-  include
+  SHARED
+  hardware/diffbot_system.cpp
+)
+target_compile_features(diffdrive_arduino PUBLIC cxx_std_17)
+target_include_directories(diffdrive_arduino PUBLIC
+$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/hardware/include>
+$<INSTALL_INTERFACE:include/diffdrive_arduino>
 )
 ament_target_dependencies(
-  diffdrive_arduino
-  hardware_interface
-  controller_manager
-  serial
-  rclcpp
-  rclcpp_lifecycle
-  pluginlib
+  diffdrive_arduino PUBLIC
+  ${THIS_PACKAGE_INCLUDE_DEPENDS}
 )
 
-pluginlib_export_plugin_description_file(hardware_interface robot_hardware.xml)
+target_link_libraries(diffdrive_arduino PUBLIC serial)
 
+# Causes the visibility macros to use dllexport rather than dllimport,
+# which is appropriate when building the dll but not consuming it.
+target_compile_definitions(${PROJECT_NAME} PRIVATE "DIFFDRIVE_ARDUINO_BUILDING_DLL")
 
+# Export hardware plugins
+pluginlib_export_plugin_description_file(hardware_interface diffdrive_arduino.xml)
 
-add_library(fake_robot SHARED src/fake_robot.cpp src/wheel.cpp)
-set_property(TARGET fake_robot PROPERTY POSITION_INDEPENDENT_CODE ON)
-
-target_include_directories(
-  fake_robot
-  PRIVATE
-  include
-)
-ament_target_dependencies(
-  fake_robot
-  hardware_interface
-  controller_manager
-  rclcpp
-  rclcpp_lifecycle
-  pluginlib
-)
-
-pluginlib_export_plugin_description_file(hardware_interface fake_robot_hardware.xml)
-
-
-
-
+# INSTALL
 install(
-  TARGETS diffdrive_arduino fake_robot
-  DESTINATION lib
+  DIRECTORY hardware/include/
+  DESTINATION include/diffdrive_arduino
 )
-
-
-
-
 install(
-  DIRECTORY controllers launch/
-  DESTINATION share/${PROJECT_NAME}
+  DIRECTORY description/launch description/ros2_control description/urdf description/rviz
+  DESTINATION share/diffdrive_arduino
+)
+install(
+  DIRECTORY bringup/launch bringup/config
+  DESTINATION share/diffdrive_arduino
+)
+install(TARGETS diffdrive_arduino
+  EXPORT export_diffdrive_arduino
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
 )
 
+if(BUILD_TESTING)
+  find_package(ament_cmake_gtest REQUIRED)
+endif()
 
-ament_export_libraries(
-  diffdrive_arduino
-  fake_robot
-)
-ament_export_dependencies(
-  hardware_interface
-  controller_manager
-  serial
-  rclcpp
-  pluginlib
-)
-
+## EXPORTS
+ament_export_targets(export_diffdrive_arduino HAS_LIBRARY_TARGET)
+ament_export_dependencies(${THIS_PACKAGE_INCLUDE_DEPENDS})
 ament_package()
-
-
