Changed the diffbot_system.cpp to check for only 1 state interface

--- a/src/articubot_one/config/my_controllers.yaml
+++ b/src/articubot_one/config/my_controllers.yaml
@@ -26,7 +26,7 @@ diff_cont:
     use_stamped_vel: false
 
     open_loop: true    
-    #position_feedback= false
+    position_feedback: false
 
     # wheels_per_side: x
     # wheel_separation_multiplier: x
